feat: migrate to Java 21, virtual threads
- Java 17 → 21 (compiler release tag)
- ParallelToolCallingManager: newFixedThreadPool → newVirtualThreadPerTaskExecutor
- Version 0.2.1 → 0.3.0